@@ -1,4 +1,4 @@
-serd (0.29.3) unstable;
+serd (0.29.4) unstable;
 
   * Fix length of base64 encoded nodes
   * Clarify errors returned by serd_env_expand()
@@ -15,8 +15,9 @@ serd (0.29.3) unstable;
   * Add NTriples test suite
   * Fix building with MSVC
   * Clean up testing code
+  * Add serd_free for freeing memory allocated by serd
 
- -- David Robillard <d@drobilla.net>  Sat, 14 Jul 2018 10:26:05 +0200
+ -- David Robillard <d@drobilla.net>  Sat, 21 Jul 2018 17:23:43 +0200
 
 serd (0.28.0) stable;
 
